--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,8 @@
     <title>Homework</title>
     <!--Файл сss-->
     <link rel="stylesheet" href="./css/styles.css">
-    
-    <!--Файли стилей Roboto-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="precоnnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!--Файли стилей Raleway Bold-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+    <!--Файли стилей Raleway Bold+ Roboto-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <!--Нормализатор стилей-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -195,6 +189,9 @@
         </ul>
       </section>
     </div> 
+
+    <h2 class="whatwemade">Постійні клієнти</h2>
+
   </main>
 
     <!-- Футер -->
