--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   
           <ul class="headlist list">
             <li class="itemhead">
-             
+             <svg>
+                <use href="/goit-markup-hw-04/images/icons.svg/envelopehover.svg" ></use>
+             </svg>
               <a class="listsitem liststudio-current" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="itemhead">
