--- a/index.html
+++ b/index.html
@@ -43,14 +43,22 @@
   
           <ul class="headlist list">
             <li class="itemhead">
-             <svg>
-                <use href="/goit-markup-hw-04/images/icons.svg/envelopehover.svg" ></use>
-             </svg>
-              <a class="listsitem liststudio-current" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="listsitem liststudio-current" href="mailto:info@devstudio.com">
+                <svg class="icon-svg" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope-hover"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
+            
             <li class="itemhead">
             
-              <a class="listsitem namber" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="listsitem namber" href="tel:+380961111111">
+                <svg class="icon-svg" width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelopehoverr"></use>
+                </svg>
+              +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </nav>
